# RetroGamingMod

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle  build.gradle.kts  gradle.properties
.github/workflows/: build-core.yml
Blockbench/: large_tv.bbmodel  monitor.bbmodel  nes.bbmodel  tv_large.bbmodel
core/: Cargo.toml  build.zig  build.zig.zon  copy_debug.sh
core/.fleet/: run.json
core/retro-bridge/: Cargo.toml
core/retro-bridge/src/: lib.rs
core/retro-bridge/src/codec/: audio_decoder.rs  audio_encoder.rs  mod.rs  video_decoder.rs  video_encoder.rs
core/retro-bridge/src/network/: client.rs  client_jni.rs  mod.rs  network_definitions.rs  server.rs  server_jni.rs
core/retro-bridge/src/platform/: generic_console.rs  generic_console_jni.rs  mod.rs
core/retro-bridge/src/protocol/: mod.rs  network_definitions.rs
core/retro-bridge/src/util/: display.rs  image.rs  initial_jni.rs  logging.rs  logging_jni.rs  mod.rs
core/retro-core/: Cargo.toml  build.rs
core/retro-core/src/: main.rs
core/retro-core/src/platform/: generic_console.rs
core/retro-core/src/trampoline/: retro_log_to_rust.c
core/retro-core/src/util/: libretro.rs  mod.rs  reader.rs
core/shared/: Cargo.toml
core/shared/src/shared/: mod.rs  shared_memory.rs
core/src/bridge/: root.zig
core/src/bridge/codec/: video_decoder.zig  video_encoder.zig
core/src/bridge/connection/: client.zig  network_definitions.zig  server.zig
core/src/bridge/headers/: com_limo_emumod_bridge_NativeServer.h  com_limo_emumod_bridge_NativeUtil.h  com_limo_emumod_client_bridge_NativeClient.h
core/src/bridge/platform/: generic_console.zig  generic_console_registry.zig
core/src/bridge/util/: native_display.zig  native_util.zig
core/src/retrocore/: main.zig
core/src/retrocore/platform/: generic_console.zig
core/src/retrocore/sys/: libretro.zig
core/src/shared/: shared_structs.zig
core/test/: Cargo.toml
core/test/src/: main.rs
src/client/java/com/limo/emumod/client/: EmuModClient.java
src/client/resources/: emumod.client.mixins.json
src/client/resources/assets/emumod/blockstates/: large_tv.json  monitor.json  nes.json
src/client/resources/assets/emumod/items/: broken_cartridge.json  cable.json  cartridge.json  game_gear.json  game_gear_cartridge.json  gameboy.json  gameboy_advance.json  gameboy_advance_cartridge.json  gameboy_cartridge.json  gameboy_color.json  gameboy_color_cartridge.json  large_tv.json  monitor.json  nes.json  nes_cartridge.json  nes_controller.json
src/client/resources/assets/emumod/lang/: en_us.json
src/client/resources/assets/emumod/models/block/: large_tv.json  monitor.json  nes.json  tv_large.json
src/client/resources/assets/emumod/models/item/: broken_cartridge.json  cable.json  cartridge.json  game_gear.json  game_gear_cartridge.json  gameboy.json  gameboy_advance.json  gameboy_advance_cartridge.json  gameboy_cartridge.json  gameboy_color.json  gameboy_color_cartridge.json  large_tv.json  monitor.json  nes.json  nes_cartridge.json  nes_controller.json
src/core/: .gitattributes  .gitignore  CMakeLists.txt  build_linux.sh  build_mingw.sh  build_win_linux.sh  build_windows.ps1  build_windows.sh  full_build.sh  vcpkg.json
src/core/bridge/: CMakeLists.txt  NativeDisplay.cpp  NativeDisplay.h
src/core/bridge-instance/: CMakeLists.txt  main.cpp
src/core/bridge-instance/platform/: GameBoy.cpp  GameBoy.hpp
src/core/bridge-instance/sys/: LibRetroCore.cpp  LibRetroCore.hpp  Video.cpp  Video.hpp  paths.h
src/core/bridge/codec/: AudioDecoder.cpp  AudioDecoder.hpp  AudioEncoder.cpp  AudioEncoder.hpp  VideoDecoder.cpp  VideoDecoder.hpp  VideoEncoder.cpp  VideoEncoder.hpp
src/core/bridge/connection/: Client.cpp  Client.hpp  NetworkDefinitions.cpp  NetworkDefinitions.hpp  Server.cpp  Server.hpp
src/core/bridge/headers/: com_limo_emumod_bridge_NativeAudio.h  com_limo_emumod_bridge_NativeDisplay.h  com_limo_emumod_bridge_NativeGameBoy.h  com_limo_emumod_bridge_NativeGenericConsole.h  com_limo_emumod_bridge_NativeServer.h  com_limo_emumod_client_bridge_NativeClient.h
src/core/bridge/old_codec/: VideoEncoder.cpp
src/core/bridge/platform/: GameBoy.cpp  GameBoy.h  GameBoy.hpp  GenericConsole.cpp  GenericConsole.hpp
src/core/bridge/sys/: LibRetroCore.cpp  LibRetroCore.hpp  paths.h
src/core/bridge/util/: AudioSource.cpp  AudioSource.hpp  NativeAudio.cpp  NativeAudio.hpp  NativeDisplay.cpp  NativeDisplay.hpp  NativeImage.cpp  NativeImage.hpp  NativeUtil.cpp  NativeUtil.hpp  VFileFix.h  util.hpp
src/core/lib/: CMakeLists.txt
src/core/lib/jni/share/: jni.h
src/core/lib/jni/unix/: jni_md.h
src/core/lib/jni/windows/: jni_md.h
src/core/retro-core/: CMakeLists.txt  export.cpp  export.h  main.cpp
src/core/retro-core/platform/: GameBoy.cpp  GenericConsole.cpp  GenericConsole.hpp
src/core/retro-core/sys/: LibRetroCore.cpp  LibRetroCore.hpp
src/core/shared/: MainStructures.hpp  PlatformStructures.hpp  SharedStructs.hpp
src/core/test/: CMakeLists.txt  main.cpp
src/core/test/new_codec/: VideoDecoder.hpp  VideoEncoder.hpp
src/core/toolchain/: linux-x86_64.cmake  linux_x64.cmake  mingw-x86_64.cmake  windows-x86_64.cmake  windows_x64.cmake
src/main/java/com/limo/emumod/: EmuMod.java
src/main/java/com/limo/emumod/bridge/: NativeAudio.java  NativeDisplay.java  NativeGameBoy.java  NativeGenericConsole.java  NativeServer.java  NativeUtil.java
src/main/java/com/limo/emumod/cartridge/: CartridgeItem.java  LinkedCartridgeItem.java
src/main/java/com/limo/emumod/components/: ConsoleComponent.java  GameComponent.java
src/main/java/com/limo/emumod/console/: ControllerItem.java  GenericConsoleBlock.java  GenericConsoleBlockEntity.java  GenericHandheldItem.java
src/main/java/com/limo/emumod/data/: EmuModDataGenerator.java
src/main/java/com/limo/emumod/gameboy/: GameboyItem.java
src/main/java/com/limo/emumod/monitor/: CableItem.java  (+2 more)
src/main/resources/: emumod.mixins.json  fabric.mod.json
src/main/resources/data/emumod/recipe/: cartridge.json  cartridge_smelting.json  gameboy.json  gameboy_advance.json  gameboy_color.json
(+44 files in other folders)
