[package]
name = "retro-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [
    "cdylib",
    "rlib"
]

[dependencies]
audiopus = "0.2.0"
dav1d = "0.11.1"
jni = "0.22.1"
rav1e = "0.8.1"
renet = "2.0.0"
shared_memory = "0.12.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
v_frame = "0.5.0"
yuv = "0.8.11"
