[package]
name = "retro-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
cc = "1.2.57"

[dependencies]
retro-shared = { path = "../shared" }
libloading = "0.9.0"
rust-libretro-sys = "0.3.2"
shared_memory = "0.12.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
parking_lot = "0.12.5"
